# ResearchAgent

./: Dockerfile  Makefile  backend.py  pyproject.toml  pythonnews_prompt.txt  requirements.txt  start_dev.sh  test_cosmos_upload.py
HomeMadeClasses/: ai_manager.py  web_search.py
frontpage/pages/: index.html
