[project]
name = "researchagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.12.15",
    "azure-cosmos>=4.9.0",
    "fastapi>=0.118.0",
    "google-search-results>=2.4.2",
    "openai>=1.109.1",
    # "serpapi>=0.1.5",
    "uvicorn>=0.37.0",
]
